<resources>
    <string name="app_name">Kickoffr</string>
    <string name="first_team_s_name">first team\'s name</string>
    <string name="thu_mar_16">Thu, Mar 16</string>
    <string name="_02_30">02:30</string>
    <string name="day_date">Day date</string>
    <string name="premiere_league">Premiere League</string>
    <string name="vs">vs</string>


    <string-array name="first_team_name">
        <item>Manchester United</item>
        <item>Crystal Palace</item>
        <item>Chelsea</item>
        <item>Arsenal</item>
        <item>Manchester City</item>
        <item>Tottenham Hotspurs</item>
        <item>Liverpool</item>
        <item>Southampton</item>
        <item>Leeds United</item>
    </string-array>

    <string-array name="second_team_name">
        <item>Crystal Palace</item>
        <item>Chelsea</item>
        <item>Arsenal</item>
        <item>Manchester City</item>
        <item>Tottenham Hotspurs</item>
        <item>Liverpool</item>
        <item>Southampton</item>
        <item>Leeds United</item>
        <item>Manchester United</item>
    </string-array>

    <string-array name="match_day_date">
        <item>Mon, 14 Mar</item>
        <item>Tue, 15 Mar</item>
        <item>Wed, 16 Mar</item>
        <item>Thu, 17 Mar</item>
        <item>Fri, 18 Mar</item>
        <item>Sat, 19 Mar</item>
        <item>Sun, 20 Mar</item>
        <item>Mon, 21 Mar</item>
        <item>Tue, 22 Mar</item>
    </string-array>

    <string-array name="match_time">
        <item>09.00</item>
        <item>10.00</item>
        <item>09.00</item>
        <item>10.00</item>
        <item>11.00</item>
        <item>12.00</item>
        <item>11.00</item>
        <item>09.00</item>
        <item>11.00</item>
    </string-array>


    <string name="match_date_time">%s, %s</string>

</resources>