<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_background"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="16dp">
    <ImageView
        android:id="@+id/firstTeamImageIcon"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:src="@color/black"
        android:scaleType="fitCenter"
        />

    <TextView
        android:id="@+id/firstTeamTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_team_s_name"
        app:layout_constraintTop_toTopOf="@id/firstTeamImageIcon"
        app:layout_constraintBottom_toBottomOf="@id/firstTeamImageIcon"
        app:layout_constraintStart_toEndOf="@id/firstTeamImageIcon"
        app:layout_constraintEnd_toStartOf="@id/divider"
        android:layout_marginHorizontal="16dp"
        />

    <ImageView
        android:id="@+id/secondTeamImageIcon"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstTeamImageIcon"
        app:layout_constraintStart_toStartOf="@id/firstTeamImageIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginTop="16dp"
        android:src="@color/black"
        android:layout_marginBottom="24dp"
        android:scaleType="fitCenter"
        />

    <TextView
        android:id="@+id/secondTeamTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_team_s_name"
        app:layout_constraintTop_toTopOf="@id/secondTeamImageIcon"
        app:layout_constraintBottom_toBottomOf="@id/secondTeamImageIcon"
        app:layout_constraintStart_toStartOf="@id/firstTeamTextName"
        app:layout_constraintEnd_toEndOf="@id/firstTeamTextName"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/firstTeamImageIcon"
        app:layout_constraintBottom_toBottomOf="@id/secondTeamImageIcon"
        app:layout_constraintStart_toEndOf="@id/firstTeamTextName"
        app:layout_constraintEnd_toStartOf="@id/matchDayDate"
        />

    <TextView
        android:id="@+id/matchDayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/matchTime"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/thu_mar_16"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/matchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/matchDayDate"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/_02_30"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:textStyle="bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>